Add paramiko-ppk dependency for PPK key support

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ matplotlib==3.10.1
 numpy==2.2.3
 packaging==24.2
 paramiko==3.5.0
+paramiko-ppk==1.2.3
 pefile==2023.2.7
 pillow==11.1.0
 pyinstaller==6.12.0
