--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,38 @@
-PySide6==6.9.0
-mutagen==1.47.0
+altgraph==0.17.4
+blinker==1.9.0
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+Flask==2.2.5
+Flask-Login==0.6.3
+fonttools==4.56.0
+gunicorn==20.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+kiwisolver==1.4.8
+lxml==5.3.1
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+numpy==2.2.3
+packaging==24.2
 paramiko==3.5.0
+paramiko-ppk==1.2.3
+pefile==2023.2.7
+pillow==11.1.0
+pyinstaller==6.12.0
+pyinstaller-hooks-contrib==2025.1
+pyparsing==3.2.1
+PySide6==6.9.0
+PySide6_Addons==6.9.0
+PySide6_Essentials==6.9.0
+python-dateutil==2.9.0.post0
+python-docx==0.8.11
+pywin32-ctypes==0.2.3
+setuptools==75.8.0
+shiboken6==6.9.0
+six==1.17.0
+typing_extensions==4.12.2
+Unidecode==1.3.6
+Werkzeug==3.1.3
+mutagen==1.47.0
